retry-intermediary/Deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: retry-intermediary
  namespace: retry-test-project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: retry-intermediary
  template:
    metadata:
      labels:
        app: retry-intermediary
      annotations:
        sidecar.istio.io/inject: 'true'
    spec:
      containers:
        - name: retry-intermediary
          image: tanyavoteva/retry-intermediary
          ports:
            - containerPort: 8080
              protocol: TCP
