retry-intermediary/VirtualService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: retry-intermediary
  namespace: retry-test-project
spec:
  gateways:
    - istio-ingressgateway
  hosts:
    - retry-intermediary.org
  http:
    - route:
        - destination:
            host: retry-intermediary
